--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.2",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "stream": "^0.0.2",
+    "util": "^0.12.4",
+    "web3": "^1.7.4"
   }
 }
